--- a/fraud_detection.ipynb
+++ b/fraud_detection.ipynb
@@ -279,6 +279,38 @@
     "plt.xlabel(\"Predicted label\")\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# UNQ_C2\n",
+    "# GRADED FUNCTION: my_dense\n",
+    "#Below, compose a new my_dense_v subroutine that performs the layer calculations for a matrix of examples. This will utilize np.matmul()\n",
+    "# UNQ_C3\n",
+    "# UNGRADED FUNCTION: my_dense_v\n",
+    "\n",
+    "def my_dense_v(A_in, W, b, g):\n",
+    "    \"\"\"\n",
+    "    Computes dense layer\n",
+    "    Args:\n",
+    "      A_in (ndarray (m,n)) : Data, m examples, n features each\n",
+    "      W    (ndarray (n,j)) : Weight matrix, n features per unit, j units\n",
+    "      b    (ndarray (1,j)) : bias vector, j units  \n",
+    "      g    activation function (e.g. sigmoid, relu..)\n",
+    "    Returns\n",
+    "      A_out (tf.Tensor or ndarray (m,j)) : m examples, j units\n",
+    "    \"\"\"\n",
+    "### START CODE HERE ###\n",
+    "    Z = np.matmul(A_in, W) + b\n",
+    "    A_out = g(Z) \n",
+    "    \n",
+    "    \n",
+    "### END CODE HERE ### \n",
+    "    return(A_out)"
+   ]
   }
  ],
  "metadata": {
